fix About Us page img position on mobile

--- a/besv-storefront/cartridges/app_besv_storefront/cartridge/client/default/scss/aboutUs.scss
+++ b/besv-storefront/cartridges/app_besv_storefront/cartridge/client/default/scss/aboutUs.scss
@@ -85,6 +85,10 @@
         }
         .story-1-image {
             z-index: 1;
+            margin-left: -100px;
+            @include media-breakpoint-down(sm) {
+                margin-left: 0;
+            }
             padding: 0;
         }
     }
